Compilation/test/correct/test2_correct.tpc
int r1 ,r2;  
int d;
int s;


int trinome(int a, int b, int c) {

    d=b*b-4*a*c;
    if (d>=0) {
        r1=(-b+s)/(2*a);
        r2=(-b-s)/(2*a);
        return 1;
    }
    return 0;
}


int valeur(int a, int b, int c, int x) {
  return a*x*x+b*x+c;
}


int main(void){
   int b, c;

   b=-1;
   while (b<=1) {
       c=-1;
       while(c<=1) {
           print(b);
           print(c);
           if (trinome(1,b,c)) {
               print(r1);
               print(r2);
           }
           c=c+1;
       }
      b=b+1;
   }
   return 0;
}

