Compilation/test/error/test2_error.tpc
int r1 ,r2;  
char d;
int s;


int trinome(int a, int b, int c) {
    int d; 
    char *s; 
    d=b*b-4*a*c;
    if (d>=0) {
        r1=(-b+s)/(2*a);
        r2=(-b-s)/(2*a);
        return 1;
    }
    return 0;
}


int valeur(int a, int b, int c, int x) {
  int *c;
  return a*x*x+b*x+c;
}

int valeur(int a, int b, int c, int x) {
  int *c;
  return a*x*x+b*x+c;
}

int main(void){
   int b, c;
   char r2, d;

   b=-1;
   while (b<=1) {
       c=-1;
       while(c<=1) {
           print(b);
           print(c);
           if (trinome(1,b,c,4)) {
               print(r1);
               print(r2);
           }
           c=c+1;
       }
      c = b+1;
      b=b+1;
   }
   return 0;
}

